investigate nodes & writhe (confused)

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -146,6 +146,75 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "86725194",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# file = topo_files[15]\n",
+    "# loadscans = LoadScans([file], channel=\"dummy\")\n",
+    "# loadscans.get_data()\n",
+    "# img_dict = loadscans.img_dict\n",
+    "# img_data = img_dict[list(img_dict.keys())[0]]\n",
+    "# print(img_data.keys())\n",
+    "\n",
+    "# node_data = img_data[\"nodestats\"][\"above\"]\n",
+    "\n",
+    "# print(node_data.keys())\n",
+    "\n",
+    "# node_images = node_data[\"images\"]\n",
+    "# nodestats = node_data[\"stats\"]\n",
+    "\n",
+    "\n",
+    "# ordered_traces = img_data[\"ordered_traces\"][\"above\"]\n",
+    "\n",
+    "# for grain_index, grain_nodestats in nodestats.items():\n",
+    "#     print(f\"Grain {grain_index}:\")\n",
+    "#     num_nodes = len(grain_nodestats)\n",
+    "#     print(f\"  Number of nodes: {num_nodes}\")\n",
+    "#     print(grain_nodestats.keys())\n",
+    "#     for node_index, node_stats in grain_nodestats.items():\n",
+    "#         print(f\"  Node {node_index}:\")\n",
+    "#         print(node_stats.keys())\n",
+    "\n",
+    "#         pixel_to_nm_scaling = node_stats[\"pixel_to_nm_scaling\"]\n",
+    "#         print(f\"    Pixel to nm scaling: {pixel_to_nm_scaling}\")\n",
+    "#         node_coords = node_stats[\"node_coords\"]\n",
+    "#         print(f\"    Node coords: {node_coords}\")\n",
+    "\n",
+    "#         node_image = node_images[grain_index]\n",
+    "#         print(node_image.keys())\n",
+    "#         node_image_grain = node_image[\"grain\"]\n",
+    "#         node_image_grain_grain_image = node_image_grain[\"grain_image\"]\n",
+    "#         node_image_grain_grain_skeleton = node_image_grain[\"grain_skeleton\"]\n",
+    "#         print(type(node_image_grain_grain_image))\n",
+    "\n",
+    "#         node_image_nodes = node_image[\"nodes\"]\n",
+    "\n",
+    "#         print(node_image_grain.keys())\n",
+    "\n",
+    "#         writhe = node_stats[\"writhe\"] if \"writhe\" in node_stats else \"NA\"\n",
+    "#         print(f\"    Writhe: {writhe}\")\n",
+    "\n",
+    "#         print(f\"       unmatched branch stats: {node_stats['unmatched_branch_stats']}\")\n",
+    "\n",
+    "#         plt.imshow(node_image_grain_grain_image)\n",
+    "#         plt.show()\n",
+    "#         plt.imshow(node_image_grain_grain_skeleton)\n",
+    "#         plt.show()\n",
+    "\n",
+    "# print(\"\")\n",
+    "\n",
+    "# for grain_index, grain_ordered_trace_data in ordered_traces.items():\n",
+    "#     print(f\"Grain {grain_index}:\")\n",
+    "#     for molecule_index, molecule_data in grain_ordered_trace_data.items():\n",
+    "#         print(f\"  Molecule {molecule_index}:\")\n",
+    "#         print(molecule_data.keys())\n",
+    "#         print(molecule_data[\"mol_stats\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "95ab65c3",
    "metadata": {},
    "outputs": [],
