add num_nodes to grains dict

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -370,9 +370,11 @@
     "\n",
     "                # grab node coordinates\n",
     "                all_node_coords = []\n",
+    "                num_nodes: int = 0\n",
     "                if nodestats_data is not None:\n",
     "                    try:\n",
     "                        grain_nodestats_data = nodestats_data[current_grain_index]\n",
+    "                        num_nodes = len(grain_nodestats_data)\n",
     "                        for _node_index, node_data in grain_nodestats_data.items():\n",
     "                            node_coords = node_data[\"node_coords\"]\n",
     "                            # adjust the node coords to account for the padding\n",
@@ -386,6 +388,7 @@
     "                            pass\n",
     "\n",
     "                grains_dictionary[grain_index][\"node_coords\"] = np.array(all_node_coords)\n",
+    "                grains_dictionary[grain_index][\"num_nodes\"] = num_nodes\n",
     "\n",
     "                grain_index += 1\n",
     "        except KeyError as e:\n",
@@ -1050,6 +1053,7 @@
     "                \"height_defect_direct_gaps_lengths\": height_defect_direct_gaps_lengths,\n",
     "                \"curvature_defect_indirect_gaps_lengths\": curvature_defect_indirect_gaps_lengths,\n",
     "                \"height_defect_indirect_gaps_lengths\": height_defect_indirect_gaps_lengths,\n",
+    "                \"num_nodes\": grain_data[\"num_nodes\"],\n",
     "            }\n",
     "        )\n",
     "\n",
@@ -1163,7 +1167,7 @@
     "height_defect_method = \"individual_iqr\"\n",
     "height_threshold_iqr_factor = 3.0  # IQR factor for height threshold\n",
     "height_threshold_abs_nm = 10.0  # nm, absolute height threshold\n",
-    "height_individual_iqr_factor = 2.0  # IQR factor for individual height defects\n",
+    "height_individual_iqr_factor = 3.0  # IQR factor for individual height defects\n",
     "coindicing_defect_distance_threshold_nm = 10.0  # nm, distance threshold for coinciding defects\n",
     "print(\"finding defects in height and curvature\")\n",
     "grains_dictionary_defects, defect_stats_df, curvature_thresholds_by_tip, height_thresholds_by_tip = (\n",
