add df stripplot / violinplot wrapper

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -1397,6 +1397,25 @@
     "        plt.ylim(ylim)\n",
     "    plt.show()\n",
     "\n",
+    "def plot_stripviolinplot_df(\n",
+    "    df: pd.DataFrame,\n",
+    "    column_name: str,\n",
+    "    ylabel: str = \"\",\n",
+    "    xlabel: str = \"\",\n",
+    "    title: str = \"\",\n",
+    "    ylim: tuple[float, float] | None = None,\n",
+    ") -> None:\n",
+    "    \"\"\"Plot a strip and violin plot for a DataFrame column.\"\"\"\n",
+    "    plt.figure()\n",
+    "    sns.stripplot(data=df, x=column_name, color=\"black\", alpha=0.5)\n",
+    "    sns.violinplot(data=df, x=column_name, color=\"lightgrey\")\n",
+    "    plt.ylabel(ylabel)\n",
+    "    plt.xlabel(xlabel)\n",
+    "    plt.title(title)\n",
+    "    if ylim is not None:\n",
+    "        plt.ylim(ylim)\n",
+    "    plt.show()\n",
+    "\n",
     "\n",
     "def plot_hist_list(\n",
     "    data: list,\n",
