plot num nodes per grain for dose

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -1397,9 +1397,11 @@
     "        plt.ylim(ylim)\n",
     "    plt.show()\n",
     "\n",
+    "\n",
     "def plot_stripviolinplot_df(\n",
     "    df: pd.DataFrame,\n",
-    "    column_name: str,\n",
+    "    x_column: str,\n",
+    "    y_column: str,\n",
     "    ylabel: str = \"\",\n",
     "    xlabel: str = \"\",\n",
     "    title: str = \"\",\n",
@@ -1407,8 +1409,8 @@
     ") -> None:\n",
     "    \"\"\"Plot a strip and violin plot for a DataFrame column.\"\"\"\n",
     "    plt.figure()\n",
-    "    sns.stripplot(data=df, x=column_name, color=\"black\", alpha=0.5)\n",
-    "    sns.violinplot(data=df, x=column_name, color=\"lightgrey\")\n",
+    "    sns.stripplot(data=df, x=x_column, y=y_column, color=\"black\", alpha=0.5)\n",
+    "    sns.violinplot(data=df, x=x_column, y=y_column, color=\"lightgrey\")\n",
     "    plt.ylabel(ylabel)\n",
     "    plt.xlabel(xlabel)\n",
     "    plt.title(title)\n",
@@ -1793,9 +1795,14 @@
    "outputs": [],
    "source": [
     "# summed abs curvature per sample type\n",
-    "# sns.stripplot(data=defect_stats_df, x=\"dose\", y=\"mean_abs_smoothed_curvature\", color=\"black\", alpha=0.5)\n",
+    "sns.stripplot(data=defect_stats_df, x=\"dose\", y=\"mean_abs_smoothed_curvature\", color=\"black\", alpha=0.5)\n",
     "plot_stripviolinplot_df(\n",
-    "    \n",
+    "    df=defect_stats_df,\n",
+    "    x_column=\"dose\",\n",
+    "    y_column=\"mean_abs_smoothed_curvature\",\n",
+    "    ylabel=\"Mean Absolute Smoothed Curvature (1/nm)\",\n",
+    "    xlabel=\"Dose (Gy)\",\n",
+    "    title=\"Mean Absolute Smoothed Curvature per Dose\",\n",
     ")"
    ]
   },
@@ -1807,7 +1814,14 @@
    "outputs": [],
    "source": [
     "# plot num nodes per grain for each dose\n",
-    "sns.violinplot(data=defect_stats_df, x=\"dose\", y=\"num_nodes\", color=\"lightgrey\")"
+    "plot_stripviolinplot_df(\n",
+    "    df=defect_stats_df,\n",
+    "    x_column=\"dose\",\n",
+    "    y_column=\"num_nodes\",\n",
+    "    ylabel=\"Number of Nodes\",\n",
+    "    xlabel=\"Dose (Gy)\",\n",
+    "    title=\"Number of Nodes per Grain for Each Dose\",\n",
+    ")"
    ]
   }
  ],
