picoz exploration: rename variable

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -21,7 +21,7 @@
     "from AFMReader.topostats import load_topostats\n",
     "\n",
     "from topostats.tracing.splining import resample_points_regular_interval\n",
-    "from topostats.measure.curvature import discrete_angle_difference_per_nm_circular\n",
+    "from topostats.measure.curvature import discrete_angle_difference_per_nm_circular, total_turn_in_region_radians\n",
     "from topostats.damage.damage import (\n",
     "    get_defects_and_gaps_from_bool_array,\n",
     "    calculate_indirect_defect_gaps,\n",
@@ -944,23 +944,23 @@
     "            #     points_distance_to_previous_nm=molecule_data[\"distances_to_previous_points_nm\"],\n",
     "            #     defects_bool=curvature_defects_bool,\n",
     "            # )\n",
-    "            curvature_defect_gap_list = get_defects_and_gaps_from_bool_array(\n",
+    "            curvature_defect_and_gap_list = get_defects_and_gaps_from_bool_array(\n",
     "                defects_bool=curvature_defects_bool,\n",
     "                circular=molecule_data[\"circular\"],\n",
     "                distance_to_previous_points_nm=molecule_data[\"distances_to_previous_points_nm\"],\n",
     "            )\n",
     "            curvature_defects_lengths = [\n",
     "                defect_or_gap.length_nm\n",
-    "                for defect_or_gap in curvature_defect_gap_list.defect_gap_list\n",
+    "                for defect_or_gap in curvature_defect_and_gap_list.defect_gap_list\n",
     "                if isinstance(defect_or_gap, Defect)\n",
     "            ]\n",
     "            curvature_defect_direct_gaps_lengths = [\n",
     "                defect_or_gap.length_nm\n",
-    "                for defect_or_gap in curvature_defect_gap_list.defect_gap_list\n",
+    "                for defect_or_gap in curvature_defect_and_gap_list.defect_gap_list\n",
     "                if isinstance(defect_or_gap, DefectGap)\n",
     "            ]\n",
     "            curvature_defect_indirect_gaps_lengths = calculate_indirect_defect_gaps(\n",
-    "                ordered_defect_gap_list=curvature_defect_gap_list,\n",
+    "                ordered_defect_gap_list=curvature_defect_and_gap_list,\n",
     "                circular=molecule_data[\"circular\"],\n",
     "            )\n",
     "            # Calculate stats on the defects and gaps\n",
@@ -971,23 +971,23 @@
     "            #     points_distance_to_previous_nm=molecule_data[\"distances_to_previous_points_nm\"],\n",
     "            #     defects_bool=height_defects_bool,\n",
     "            # )\n",
-    "            height_defect_gap_list = get_defects_and_gaps_from_bool_array(\n",
+    "            height_defect_and_gap_list = get_defects_and_gaps_from_bool_array(\n",
     "                defects_bool=height_defects_bool,\n",
     "                circular=molecule_data[\"circular\"],\n",
     "                distance_to_previous_points_nm=molecule_data[\"distances_to_previous_points_nm\"],\n",
     "            )\n",
     "            height_defects_lengths = [\n",
     "                defect_or_gap.length_nm\n",
-    "                for defect_or_gap in height_defect_gap_list.defect_gap_list\n",
+    "                for defect_or_gap in height_defect_and_gap_list.defect_gap_list\n",
     "                if isinstance(defect_or_gap, Defect)\n",
     "            ]\n",
     "            height_defect_direct_gaps_lengths = [\n",
     "                defect_or_gap.length_nm\n",
-    "                for defect_or_gap in height_defect_gap_list.defect_gap_list\n",
+    "                for defect_or_gap in height_defect_and_gap_list.defect_gap_list\n",
     "                if isinstance(defect_or_gap, DefectGap)\n",
     "            ]\n",
     "            height_defect_indirect_gaps_lengths = calculate_indirect_defect_gaps(\n",
-    "                ordered_defect_gap_list=height_defect_gap_list,\n",
+    "                ordered_defect_gap_list=height_defect_and_gap_list,\n",
     "                circular=molecule_data[\"circular\"],\n",
     "            )\n",
     "            mean_height_defect_length = np.mean(height_defects_lengths)\n",
