add resampling -> smoothing -> resampling to smooth out curvature spikes

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -23,7 +23,7 @@
     "from skimage.morphology import binary_dilation, binary_erosion, skeletonize\n",
     "\n",
     "from topostats.plottingfuncs import Colormap\n",
-    "from topostats.tracing.splining import resample_points_regular_interval\n",
+    "from topostats.tracing.splining import resample_points_regular_interval, windowTrace\n",
     "from topostats.measure.feret import get_feret_from_mask\n",
     "from topostats.measure.curvature import discrete_angle_difference_per_nm_linear\n",
     "from topostats.damage.damage import get_defects_and_gaps_from_bool_array, Defect, DefectGap\n",
@@ -274,6 +274,7 @@
    "source": [
     "# pathfinding\n",
     "grains_dicts_paths = {}\n",
+    "bad_grains = []\n",
     "for sample_type, grains_dict_sample in grains_dicts.items():\n",
     "    grains_dicts_paths[sample_type] = {}\n",
     "    for grain_index, grain_data in grains_dict_sample.items():\n",
@@ -321,10 +322,20 @@
     "\n",
     "        route = np.array(route)\n",
     "\n",
+    "        # if the route is fewer than 4 points, skip it\n",
+    "        if len(route) < 5:\n",
+    "            print(\n",
+    "                f\"Skipping grain {grain_index} for sample type [{sample_type}] due to route being too short: {len(route)} < 4\"\n",
+    "            )\n",
+    "            bad_grains.append((sample_type, grain_index))\n",
+    "            continue\n",
+    "\n",
     "        # save the original grain data\n",
     "        grains_dicts_paths[sample_type][grain_index] = grain_data\n",
     "        # add the route to the grain data\n",
     "        grains_dicts_paths[sample_type][grain_index][\"path\"] = route\n",
+    "\n",
+    "print(f\"Bad grains: {bad_grains}\")\n",
     "\n",
     "# plot all grains with paths\n",
     "if False:\n",
@@ -348,6 +359,10 @@
    "outputs": [],
    "source": [
     "# resampling the paths\n",
+    "trace_resampling_distance_nm = 2.0\n",
+    "smoothing_window_size_nm = 3.0\n",
+    "verbose = False\n",
+    "\n",
     "grains_dicts_resampled_paths = {}\n",
     "for sample_type, grains_dict_sample in grains_dicts_paths.items():\n",
     "    grains_dicts_resampled_paths[sample_type] = {}\n",
@@ -358,7 +373,36 @@
     "        p_to_nm = grain_data[\"p_to_nm\"]\n",
     "        path = grain_data[\"path\"]\n",
     "\n",
-    "        resampled_path_px = resample_points_regular_interval(points=path, interval=2 / p_to_nm, circular=False)\n",
+    "        if verbose:\n",
+    "            print(f\"grain: {grain_index}\")\n",
+    "            print(f\"p2nm: {p_to_nm}\")\n",
+    "            print(f\"path shape: {path.shape}\")\n",
+    "        resampled_path_px = resample_points_regular_interval(\n",
+    "            points=path, interval=trace_resampling_distance_nm / p_to_nm, circular=False\n",
+    "        )\n",
+    "        if verbose:\n",
+    "            print(f\"resampled path shape: {resampled_path_px.shape}\")\n",
+    "        # smooth the path a bit\n",
+    "        smoothed_path_px = windowTrace.pool_trace_linear(\n",
+    "            pixel_trace=resampled_path_px,\n",
+    "            rolling_window_size=smoothing_window_size_nm,\n",
+    "            pixel_to_nm_scaling=p_to_nm,\n",
+    "        )\n",
+    "        if verbose:\n",
+    "            print(f\"smoothed path shape: {smoothed_path_px.shape}\")\n",
+    "        # re-sample again to ensure the path is regular\n",
+    "        resampled_path_px = resample_points_regular_interval(\n",
+    "            points=smoothed_path_px, interval=trace_resampling_distance_nm / p_to_nm, circular=False\n",
+    "        )\n",
+    "        if verbose:\n",
+    "            print(f\"final resampled path shape: {resampled_path_px.shape}\")\n",
+    "            print()\n",
+    "\n",
+    "        if len(resampled_path_px) <= 2:\n",
+    "            print(\n",
+    "                f\"Skipping grain {grain_index} for sample type [{sample_type}] due to resampled path too short: {len(resampled_path_px)}\"\n",
+    "            )\n",
+    "            continue\n",
     "\n",
     "        diffs = resampled_path_px[1:, :] - resampled_path_px[:-1, :]\n",
     "        resampled_distances_px = np.linalg.norm(diffs, axis=1)\n",
@@ -367,12 +411,6 @@
     "        resampled_distances_nm = resampled_distances_px * p_to_nm\n",
     "        cumulative_resampled_distances_px = np.cumsum(resampled_distances_px)\n",
     "        cumulative_resampled_distances_nm = np.cumsum(resampled_distances_nm)\n",
-    "\n",
-    "        if len(resampled_path_px) <= 2:\n",
-    "            print(\n",
-    "                f\"Skipping grain {grain_index} for sample type [{sample_type}] due to resampled path too short: {len(resampled_path_px)}\"\n",
-    "            )\n",
-    "            continue\n",
     "\n",
     "        # save the original grain data\n",
     "        grains_dicts_resampled_paths[sample_type][grain_index] = grain_data\n",
@@ -556,7 +594,7 @@
     "        save_path=save_dirs[sample_type] / f\"grains_with_defects_{sample_type}.png\",\n",
     "        show_plot=True,\n",
     "        figsize_multiplier=5,\n",
-    "        num_grains_to_limit_to=10,\n",
+    "        num_grains_to_limit_to=30,\n",
     "        num_cols=5,\n",
     "    )"
    ]
