add image plot size nm

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -13,6 +13,7 @@
     "from datetime import datetime\n",
     "\n",
     "import numpy as np\n",
+    "import numpy.typing as npt\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "import matplotlib.gridspec as gridspec\n",
@@ -87,6 +88,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "58717f2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pad_image_to_set_nm_size(image: np.ndarray, p_to_nm: float, target_size_nm: float) -> npt.NDArray[np.float64]:\n",
+    "    \"\"\"Pad an image to a target size in nm.\"\"\"\n",
+    "    target_size_px = int(target_size_nm / p_to_nm)\n",
+    "    # if the image is smaller than the target size, pad it with zeros\n",
+    "    # If either dimension is larger than the target size, crop it to the target size\n",
+    "    if image.shape[0] > target_size_px or image.shape[1] > target_size_px:\n",
+    "        cropped_image = image[:target_size_px, :target_size_px]\n",
+    "        return cropped_image\n",
+    "\n",
+    "    # If either dimension is smaller than the target size, pad it with zeros half on each side\n",
+    "    if image.shape[0] < target_size_px or image.shape[1] < target_size_px:\n",
+    "        pad_height = max(0, target_size_px - image.shape[0])\n",
+    "        pad_width = max(0, target_size_px - image.shape[1])\n",
+    "        pad_top = pad_height // 2\n",
+    "        pad_bottom = pad_height - pad_top\n",
+    "        pad_left = pad_width // 2\n",
+    "        pad_right = pad_width - pad_left\n",
+    "        padded_image = np.pad(\n",
+    "            image, ((pad_top, pad_bottom), (pad_left, pad_right)), mode=\"constant\", constant_values=0\n",
+    "        )\n",
+    "        return padded_image\n",
+    "    return image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8dbc5232",
    "metadata": {},
    "outputs": [],
@@ -97,6 +129,7 @@
     "    vmin: float = VMIN,\n",
     "    vmax: float = VMAX,\n",
     "    cmap: mpl.cm = CMAP,\n",
+    "    image_plot_size_nm: float = None,\n",
     "    plot_paths: list[str] = None,\n",
     "    plot_defects: bool = False,\n",
     "    plot_colour_paths: list[tuple[str, str]] = None,\n",
@@ -128,6 +161,10 @@
     "        grain_image = grain_data[\"image\"]\n",
     "        grain_mask = grain_data[\"predicted_mask\"]\n",
     "        grain_p_to_nm = grain_data[\"p_to_nm\"]\n",
+    "\n",
+    "        if image_plot_size_nm is not None:\n",
+    "            grain_image = pad_image_to_set_nm_size(grain_image, grain_p_to_nm, image_plot_size_nm)\n",
+    "            grain_mask = pad_image_to_set_nm_size(grain_mask, grain_p_to_nm, image_plot_size_nm)\n",
     "\n",
     "        outer_coords = np.unravel_index(inner_index, (num_rows, num_cols))\n",
     "\n",
@@ -262,6 +299,7 @@
     "            wspace=0,\n",
     "            hspace=0,\n",
     "            num_cols=5,\n",
+    "            image_plot_size_nm=40,\n",
     "        )"
    ]
   },
