fix misaligned traces when plotting due to padding

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -92,14 +92,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pad_image_to_set_nm_size(image: np.ndarray, p_to_nm: float, target_size_nm: float) -> npt.NDArray[np.float64]:\n",
+    "def pad_image_to_set_nm_size(\n",
+    "    image: np.ndarray, p_to_nm: float, target_size_nm: float\n",
+    ") -> tuple[npt.NDArray[np.float64], tuple[int, int, int, int]]:\n",
     "    \"\"\"Pad an image to a target size in nm.\"\"\"\n",
     "    target_size_px = int(target_size_nm / p_to_nm)\n",
     "    # if the image is smaller than the target size, pad it with zeros\n",
     "    # If either dimension is larger than the target size, crop it to the target size\n",
     "    if image.shape[0] > target_size_px or image.shape[1] > target_size_px:\n",
     "        cropped_image = image[:target_size_px, :target_size_px]\n",
-    "        return cropped_image\n",
+    "        padding = (\n",
+    "            -1 * max(0, target_size_px - cropped_image.shape[0]),\n",
+    "            -1 * max(0, target_size_px - cropped_image.shape[1]),\n",
+    "        )\n",
+    "        return cropped_image, padding\n",
     "\n",
     "    # If either dimension is smaller than the target size, pad it with zeros half on each side\n",
     "    if image.shape[0] < target_size_px or image.shape[1] < target_size_px:\n",
@@ -112,8 +118,8 @@
     "        padded_image = np.pad(\n",
     "            image, ((pad_top, pad_bottom), (pad_left, pad_right)), mode=\"constant\", constant_values=0\n",
     "        )\n",
-    "        return padded_image\n",
-    "    return image"
+    "        return padded_image, (pad_top, pad_bottom, pad_left, pad_right)\n",
+    "    return image, (0, 0, 0, 0)"
    ]
   },
   {
