add gaussian filter to curvature values

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -135,7 +135,7 @@
     "    vmin: float = VMIN,\n",
     "    vmax: float = VMAX,\n",
     "    cmap: mpl.cm = CMAP,\n",
-    "    image_plot_size_nm: float = None,\n",
+    "    image_plot_size_nm: float = 40,\n",
     "    plot_paths: list[str] = None,\n",
     "    plot_defects: bool = False,\n",
     "    plot_colour_paths: list[tuple[str, str]] = None,\n",
@@ -168,9 +168,11 @@
     "        grain_mask = grain_data[\"predicted_mask\"]\n",
     "        grain_p_to_nm = grain_data[\"p_to_nm\"]\n",
     "\n",
+    "        image_padding = (0, 0, 0, 0)\n",
+    "        mask_padding = (0, 0, 0, 0)\n",
     "        if image_plot_size_nm is not None:\n",
-    "            grain_image = pad_image_to_set_nm_size(grain_image, grain_p_to_nm, image_plot_size_nm)\n",
-    "            grain_mask = pad_image_to_set_nm_size(grain_mask, grain_p_to_nm, image_plot_size_nm)\n",
+    "            grain_image, image_padding = pad_image_to_set_nm_size(grain_image, grain_p_to_nm, image_plot_size_nm)\n",
+    "            grain_mask, mask_padding = pad_image_to_set_nm_size(grain_mask, grain_p_to_nm, image_plot_size_nm)\n",
     "\n",
     "        outer_coords = np.unravel_index(inner_index, (num_rows, num_cols))\n",
     "\n",
@@ -199,6 +201,8 @@
     "                    path = grain_data[path_name]\n",
     "                    if path is not None:\n",
     "                        if len(path) > 2:\n",
+    "                            # add image padding to the path coordinates\n",
+    "                            path = path + np.array(mask_padding[:2])\n",
     "                            mask_ax.plot(path[:, 1], path[:, 0], color=\"red\", linewidth=2, label=path_name)\n",
     "        if plot_colour_paths is not None:\n",
     "            for path_name, colour_array in plot_colour_paths:\n",
@@ -210,6 +214,8 @@
     "                    )\n",
     "                    if path is not None:\n",
     "                        if len(path) > 2:\n",
+    "                            # add image padding to the path coordinates\n",
+    "                            path = path + np.array(mask_padding[:2])\n",
     "                            for point_index, point in enumerate(path):\n",
     "                                colour = COLOUR_PATH_CMAP(normalised_cvals[point_index])\n",
     "                                if point_index > 0:\n",
@@ -233,8 +239,8 @@
     "                        defect = defect_or_gap\n",
     "                        defect_start = defect.start_index\n",
     "                        defect_end = defect.end_index\n",
-    "                        defect_start_point = grain_data[\"resampled_path_px\"][defect_start]\n",
-    "                        defect_end_point = grain_data[\"resampled_path_px\"][defect_end]\n",
+    "                        defect_start_point = grain_data[\"resampled_path_px\"][defect_start] + np.array(mask_padding[:2])\n",
+    "                        defect_end_point = grain_data[\"resampled_path_px\"][defect_end] + np.array(mask_padding[:2])\n",
     "                        mask_ax.scatter(\n",
     "                            defect_start_point[1],\n",
     "                            defect_start_point[0],\n",
@@ -305,7 +311,6 @@
     "            wspace=0,\n",
     "            hspace=0,\n",
     "            num_cols=5,\n",
-    "            image_plot_size_nm=40,\n",
     "        )"
    ]
   },
@@ -382,7 +387,7 @@
     "print(f\"Bad grains: {bad_grains}\")\n",
     "\n",
     "# plot all grains with paths\n",
-    "if False:\n",
+    "if True:\n",
     "    for sample_type, grain_dict in grains_dicts_paths.items():\n",
     "        print(f\"Plotting grains with paths for sample type [{sample_type}]\")\n",
     "        plot_all_grains_dictionary(\n",
@@ -392,6 +397,7 @@
     "            cmap=CMAP,\n",
     "            plot_paths=[\"path\"],\n",
     "            save_path=save_dirs[sample_type] / f\"grains_with_paths_{sample_type}.png\",\n",
+    "            num_grains_to_limit_to=10,\n",
     "        )"
    ]
   },
@@ -403,7 +409,7 @@
    "outputs": [],
    "source": [
     "# resampling the paths\n",
-    "trace_resampling_distance_nm = 2.0\n",
+    "trace_resampling_distance_nm = 1.0\n",
     "smoothing_window_size_nm = 3.0\n",
     "verbose = False\n",
     "\n",
@@ -421,14 +427,14 @@
     "            print(f\"grain: {grain_index}\")\n",
     "            print(f\"p2nm: {p_to_nm}\")\n",
     "            print(f\"path shape: {path.shape}\")\n",
-    "        resampled_path_px = resample_points_regular_interval(\n",
-    "            points=path, interval=trace_resampling_distance_nm / p_to_nm, circular=False\n",
-    "        )\n",
-    "        if verbose:\n",
-    "            print(f\"resampled path shape: {resampled_path_px.shape}\")\n",
+    "        # resampled_path_px = resample_points_regular_interval(\n",
+    "        #     points=path, interval=trace_resampling_distance_nm / p_to_nm, circular=False\n",
+    "        # )\n",
+    "        # if verbose:\n",
+    "        #     print(f\"resampled path shape: {resampled_path_px.shape}\")\n",
     "        # smooth the path a bit\n",
     "        smoothed_path_px = windowTrace.pool_trace_linear(\n",
-    "            pixel_trace=resampled_path_px,\n",
+    "            pixel_trace=path,\n",
     "            rolling_window_size=smoothing_window_size_nm,\n",
     "            pixel_to_nm_scaling=p_to_nm,\n",
     "        )\n",
@@ -524,6 +530,10 @@
    "outputs": [],
    "source": [
     "# calcuate curvature of the path\n",
+    "\n",
+    "curvature_gaussian_sigma_nm = 1.0\n",
+    "curvature_gaussian_sigma_points = int(curvature_gaussian_sigma_nm / trace_resampling_distance_nm)\n",
+    "\n",
     "grains_dicts_curvature = {}\n",
     "for sample_type, grains_dict_sample in grains_dicts_feret_diameter.items():\n",
     "    grains_dicts_curvature[sample_type] = {}\n",
@@ -536,6 +546,12 @@
     "\n",
     "        # calculate the curvature\n",
     "        path_curvatures = discrete_angle_difference_per_nm_linear(trace_nm=resampled_path_px * p_to_nm)\n",
+    "        # smooth the curvature with a gaussian filter\n",
+    "        path_curvatures = gaussian_filter1d(\n",
+    "            path_curvatures,\n",
+    "            sigma=curvature_gaussian_sigma_points,\n",
+    "            mode=\"nearest\",\n",
+    "        )\n",
     "\n",
     "        # save the original grain data\n",
     "        grains_dicts_curvature[sample_type][grain_index] = grain_data\n",
