update figure 1 notebook to use local paths for saving outputs

--- a/hariborings/figure_1.ipynb
+++ b/hariborings/figure_1.ipynb
@@ -27,17 +27,20 @@
    "source": [
     "DATA_DIR = Path(\"/Users/sylvi/topo_data/hariborings/extracted_grains/\")\n",
     "# FIG_SAVE_DIR = Path(f\"/Volumes/shared-3/pyne_group/Shared/Papers/cas9_minicircles/figure_1/\")\n",
-    "FIG_SAVE_DIR = Path(\n",
-    "    f\"/Users/sylvi/Library/CloudStorage/GoogleDrive-sylvia.whittle@sheffield.ac.uk/Shared drives/Pyne_group_data/Papers/Cas9/figures/fig_1_revised/updated_nomenclature/\"\n",
-    ")\n",
+    "# FIG_SAVE_DIR = Path(\n",
+    "#     f\"/Users/sylvi/Library/CloudStorage/GoogleDrive-sylvia.whittle@sheffield.ac.uk/Shared drives/Pyne_group_data/Papers/Cas9/figures/fig_1_revised/updated_nomenclature/\"\n",
+    "# )\n",
+    "FIG_SAVE_DIR = Path(\"/Users/sylvi/topo_data/cas9-paper-graphs-updated-nomenclature/fig-1/\")\n",
     "assert FIG_SAVE_DIR.exists()\n",
-    "CSV_SAVE_DIR = Path(\n",
-    "    f\"/Users/sylvi/Library/CloudStorage/GoogleDrive-sylvia.whittle@sheffield.ac.uk/Shared drives/Pyne_group_data/Papers/Cas9/figures/fig_1_revised/updated_nomenclature/csv_data/\"\n",
-    ")\n",
+    "# CSV_SAVE_DIR = Path(\n",
+    "#     f\"/Users/sylvi/Library/CloudStorage/GoogleDrive-sylvia.whittle@sheffield.ac.uk/Shared drives/Pyne_group_data/Papers/Cas9/figures/fig_1_revised/updated_nomenclature/csv_data/\"\n",
+    "# )\n",
+    "CSV_SAVE_DIR = Path(\"/Users/sylvi/topo_data/cas9-paper-graphs-updated-nomenclature/fig-1/csv-data/\")\n",
     "assert CSV_SAVE_DIR.exists()\n",
-    "HIGH_RES_GRAPH_SAVE_DIR = Path(\n",
-    "    f\"/Users/sylvi/Library/CloudStorage/GoogleDrive-sylvia.whittle@sheffield.ac.uk/Shared drives/Pyne_group_data/Papers/Cas9/figures/fig_1_revised/updated_nomenclature/high_res_graphs/\"\n",
-    ")\n",
+    "# HIGH_RES_GRAPH_SAVE_DIR = Path(\n",
+    "#     f\"/Users/sylvi/Library/CloudStorage/GoogleDrive-sylvia.whittle@sheffield.ac.uk/Shared drives/Pyne_group_data/Papers/Cas9/figures/fig_1_revised/updated_nomenclature/high_res_graphs/\"\n",
+    "# )\n",
+    "HIGH_RES_GRAPH_SAVE_DIR = Path(\"/Users/sylvi/topo_data/cas9-paper-graphs-updated-nomenclature/fig-1/high-res-graphs/\")\n",
     "assert HIGH_RES_GRAPH_SAVE_DIR.exists()\n",
     "LOAD_DATE = \"2024-05-21\"\n",
     "TODAY_DATE = datetime.today().strftime(\"%Y-%m-%d\")\n",
@@ -538,10 +541,18 @@
     "    legend_label=\"on rel\",\n",
     ")\n",
     "plot_kde_individual(\n",
-    "    name=\"ot1 rel\", data=df_aspect_ratio_unbound_ot1[\"feret_ratio\"], ax=ax, color=rel_palette[1], legend_label=\"ot1 rel\"\n",
+    "    name=\"ot1 rel\",\n",
+    "    data=df_aspect_ratio_unbound_ot1[\"feret_ratio\"],\n",
+    "    ax=ax,\n",
+    "    color=rel_palette[1],\n",
+    "    legend_label=\"ot1 rel\",\n",
     ")\n",
     "plot_kde_individual(\n",
-    "    name=\"ot2 rel\", data=df_aspect_ratio_unbound_ot2[\"feret_ratio\"], ax=ax, color=rel_palette[2], legend_label=\"ot2 rel\"\n",
+    "    name=\"ot2 rel\",\n",
+    "    data=df_aspect_ratio_unbound_ot2[\"feret_ratio\"],\n",
+    "    ax=ax,\n",
+    "    color=rel_palette[2],\n",
+    "    legend_label=\"ot2 rel\",\n",
     ")\n",
     "plt.xlabel(\"Aspect ratio\", fontsize=axlabel_font_size)\n",
     "plt.ylabel(\"Density\", fontsize=axlabel_font_size)\n",
@@ -1281,8 +1292,12 @@
     "\n",
     "print_break(\"unbound rel on ot1 ot2\")\n",
     "df_contour_length_unbound_rel_on = df[df[\"sample_type\"] == \"unbound_ON_REL\"].loc[:, [\"sample_type\", \"contour_length\"]]\n",
-    "df_contour_length_unbound_ot1_rel = df[df[\"sample_type\"] == \"unbound_OT1_REL\"].loc[:, [\"sample_type\", \"contour_length\"]]\n",
-    "df_contour_length_unbound_ot2_rel = df[df[\"sample_type\"] == \"unbound_OT2_REL\"].loc[:, [\"sample_type\", \"contour_length\"]]\n",
+    "df_contour_length_unbound_ot1_rel = df[df[\"sample_type\"] == \"unbound_OT1_REL\"].loc[\n",
+    "    :, [\"sample_type\", \"contour_length\"]\n",
+    "]\n",
+    "df_contour_length_unbound_ot2_rel = df[df[\"sample_type\"] == \"unbound_OT2_REL\"].loc[\n",
+    "    :, [\"sample_type\", \"contour_length\"]\n",
+    "]\n",
     "print(f\"num on rel: {len(df_contour_length_unbound_rel_on)}\")\n",
     "print(f\"num ot1 rel: {len(df_contour_length_unbound_ot1_rel)}\")\n",
     "print(f\"num ot2 rel: {len(df_contour_length_unbound_ot2_rel)}\")\n",
@@ -1631,8 +1646,12 @@
     "\n",
     "print_break(\"protein max height | cas9 sc on, ot1, ot2\")\n",
     "df_protein_max_height_cas9_on_sc = df[df[\"sample_type\"] == \"cas9_ON_SC\"].loc[:, [\"sample_type\", \"protein_max_height\"]]\n",
-    "df_protein_max_height_cas9_ot1_sc = df[df[\"sample_type\"] == \"cas9_OT1_SC\"].loc[:, [\"sample_type\", \"protein_max_height\"]]\n",
-    "df_protein_max_height_cas9_ot2_sc = df[df[\"sample_type\"] == \"cas9_OT2_SC\"].loc[:, [\"sample_type\", \"protein_max_height\"]]\n",
+    "df_protein_max_height_cas9_ot1_sc = df[df[\"sample_type\"] == \"cas9_OT1_SC\"].loc[\n",
+    "    :, [\"sample_type\", \"protein_max_height\"]\n",
+    "]\n",
+    "df_protein_max_height_cas9_ot2_sc = df[df[\"sample_type\"] == \"cas9_OT2_SC\"].loc[\n",
+    "    :, [\"sample_type\", \"protein_max_height\"]\n",
+    "]\n",
     "print(f\"num on sc: {len(df_protein_max_height_cas9_on_sc)}\")\n",
     "print(f\"num ot1 sc: {len(df_protein_max_height_cas9_ot1_sc)}\")\n",
     "print(f\"num ot2 sc: {len(df_protein_max_height_cas9_ot2_sc)}\")\n",
