add histograms in addition to kdes of defect position

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -14,6 +14,7 @@
     "\n",
     "import numpy as np\n",
     "import numpy.typing as npt\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "import matplotlib.gridspec as gridspec\n",
@@ -669,12 +670,14 @@
     "# plot the positions of the defects for each sample type\n",
     "# collect all defect positions first\n",
     "all_defect_positions = {}\n",
+    "maximum_defect_position = 0.0\n",
     "for sample_type, grain_dict in grains_dicts_curvature_defects.items():\n",
     "    defect_positions_nm = []\n",
     "    for grain_index, grain_data in grain_dict.items():\n",
     "        for defect_or_gap in grain_data[\"ordered_defect_list\"].defect_gap_list:\n",
     "            if isinstance(defect_or_gap, Defect):\n",
     "                defect_positions_nm.append(defect_or_gap.position_along_trace_nm)\n",
+    "                maximum_defect_position = max(maximum_defect_position, defect_or_gap.position_along_trace_nm)\n",
     "    all_defect_positions[sample_type] = defect_positions_nm\n",
     "    print(f\"Number of defects for sample type [{sample_type}]: {len(defect_positions_nm)}\")\n",
     "\n",
@@ -685,9 +688,7 @@
     "    defect_positions_nm = all_defect_positions[sample_type]\n",
     "\n",
     "    # create stripplot and violinplot on the same axis\n",
-    "    sns.stripplot(\n",
-    "        x=[sample_type] * len(defect_positions_nm), y=defect_positions_nm, jitter=0.1, color=\"grey\", ax=axes[i]\n",
-    "    )\n",
+    "    sns.stripplot(x=[sample_type] * len(defect_positions_nm), y=defect_positions_nm, color=\"grey\", ax=axes[i])\n",
     "    sns.violinplot(\n",
     "        x=[sample_type] * len(defect_positions_nm),\n",
     "        y=defect_positions_nm,\n",
@@ -699,7 +700,7 @@
     "    )\n",
     "\n",
     "    axes[i].set_title(f\"{sample_type}\\n({len(defect_positions_nm)} defects)\")\n",
-    "    axes[i].set_xlabel(\"Sample Type\")\n",
+    "    axes[i].set_xlabel(\"\")\n",
     "    if i == 0:\n",
     "        axes[i].set_ylabel(\"Position along trace (nm)\")\n",
     "    else:\n",
@@ -709,6 +710,23 @@
     "    axes[i].set_xticklabels([])\n",
     "\n",
     "plt.suptitle(\"Defect Positions by Sample Type\", fontsize=16)\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# histograms of defect positions\n",
+    "fig, axes = plt.subplots(1, len(sample_types), figsize=(15, 5), sharey=True)\n",
+    "for i, sample_type in enumerate(sample_types):\n",
+    "    defect_positions_nm = all_defect_positions[sample_type]\n",
+    "\n",
+    "    # create histogram\n",
+    "    axes[i].hist(defect_positions_nm, bins=\"auto\", color=\"lightblue\", edgecolor=\"black\", alpha=0.7)\n",
+    "    axes[i].set_title(f\"{sample_type}\\n({len(defect_positions_nm)} defects)\")\n",
+    "    axes[i].set_xlabel(\"Defect position along trace (nm)\")\n",
+    "    if i == 0:\n",
+    "        axes[i].set_ylabel(\"Count\")\n",
+    "    else:\n",
+    "        axes[i].set_ylabel(\"\")\n",
+    "    # set x-axis limits to be the same for all plots\n",
+    "    axes[i].set_xlim(0, maximum_defect_position * 1.1)\n",
     "plt.tight_layout()\n",
     "\n",
     "# save the combined plot\n",
